# predict_consumption_model

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py  requirements.txt
datas/: eco2mix-national-tr-y.csv
model/: model_xgboost_journalier_optimise.json
model_creation/: analyse_et_preparation.ipynb  notebook_modelisation_journalier_final.ipynb
